<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/add_visited_place_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:orientation="vertical"
    android:padding="@dimen/activity_vertical_margin"
    app:behavior_hideable="true">

    <TextView
        android:id="@+id/add_visited_place_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search_places"
        android:textAlignment="center"
        android:textSize="28sp" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="0,1">

        <TableRow>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/restaurant"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:text="@string/restaurants"
                android:textAllCaps="false"
                app:icon="@drawable/ic_restaurant_black_24dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/Hotels"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:text="@string/hotels"
                android:textAllCaps="false"
                app:icon="@drawable/ic_hotel_black_24dp" />
        </TableRow>

        <TableRow>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/Cafe"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:text="@string/coffee"
                android:textAllCaps="false"
                app:icon="@drawable/ic_local_cafe_white_24dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/Groceries"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:text="@string/groceries"
                android:textAllCaps="false"
                app:icon="@drawable/ic_local_grocery_store_black_24dp" />
        </TableRow>

        <TableRow>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/Hospitals"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:text="@string/hospitals"
                android:textAllCaps="false"
                app:icon="@drawable/ic_local_hospital_black_24dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/Attractions"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:text="@string/attractions"
                android:textAllCaps="false"
                app:icon="@drawable/ic_star_black_24dp" />
        </TableRow>

    </TableLayout>

</LinearLayout>