<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/add_trip_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:orientation="vertical"
    android:padding="16dp"
    app:behavior_hideable="true">

    <TextView
        android:id="@+id/add_trip_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_trip"
        android:textAlignment="center"
        android:textSize="28sp" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:hint="@string/title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/add_trip_edit_text_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:hint="@string/notes">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/add_trip_edit_text_notes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:weightSum="2"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/add_trip_text_start_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/trip_details_start_date"
                android:textAlignment="center" />

            <com.google.android.material.button.MaterialButton
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:id="@+id/add_trip_button_start_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAllCaps="false" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/add_trip_text_end_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/trip_detail_end_date"
                android:textAlignment="center" />

            <com.google.android.material.button.MaterialButton
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:id="@+id/add_trip_button_end_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAllCaps="false" />
        </LinearLayout>
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/add_trip_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/add_trip"
        android:textAllCaps="false"
        app:cornerRadius="28dp"
        app:icon="@drawable/ic_add_black_24dp"
        app:iconGravity="textStart" />

</LinearLayout>